--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "download-gateway",
+  "type": "module",
   "version": "1.0.0",
   "description": "Frontend service to download dashboard queries as EXCEL workbooks",
   "main": "src/index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint src",
+    "quickfix": "eslint src --fix",
     "start": "node src/index.mjs"
   },
   "author": "ZHAW ICLS (Christian Glahn)",
